# MECENG235

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODEBASE_WALKTHROUGH.md  README.md
.cache/clangd/index/: acquisition.c.E0E0083A4EEEB220.idx  acquisition.h.832FD0A39376D155.idx  calibration.c.AD68AA567A25E334.idx  calibration.h.6A09E00B6BBDF155.idx  data_types.h.4B3E07FEC8BF6680.idx  euler.c.7067306AF8CE36C6.idx  euler.h.5BE5E3EB612836CE.idx  filters.c.1C1259666DE80855.idx  filters.h.171D2C928A3E6CF0.idx  main.c.0827FC77C35CAEA6.idx  motor_control.c.DA727D98F48E6F98.idx  motor_control.h.FB0B8F82DC53301D.idx  nvs_storage.c.E5C60471D08B88C8.idx  nvs_storage.h.289D1180DA54FC0F.idx  processing.c.513C9C7584F4B344.idx  processing.h.61AA8BF11A727C89.idx  (+13 more)
ESP32_Code/main/: uart_echo_example_main.c
components/sh2/: CMakeLists.txt  CMakeLists.txt.disabled  sh2_hal_esp32.c  sh2_hal_esp32.h
docs/: THESIS_DEFENSE_PREP.md
gui/: esp32_controller.py  hand_visualizer.py  requirements.txt
lab4-labview/: Control 1.ctl  ESP32 Continuous Serial Write and Read.vi  ESP32-PSOC-State Machine-1.ctl  Project.vi  Serial - XON-XOFF Characters.ctl  esp32.aliases  esp32.lvlps  esp32.lvproj
main/: CMakeLists.txt  acquisition.c  acquisition.h  calibration.c  calibration.h  control.c  control.h  data_types.h  filters.c  filters.h  idf_component.yml  led_status.c  led_status.h  main.c  motor_control.c  motor_control.h  nvs_storage.c  nvs_storage.h  processing.c  processing.h  uart_echo_example_main.c
tests/: dual_core_monitor.py  fsr_test.py  imu_test.py  multitask_proof.py
