idf_component_register(
    SRCS
        "main.c"
        "acquisition.c"
        "processing.c"
        "calibration.c"
        "filters.c"
        "led_status.c"
        "motor_control.c"
        "nvs_storage.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_driver_uart
        esp_driver_gpio
        esp_adc
        nvs_flash
        esp_timer
        freertos
        log
)
